# tftt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/api/: CMakeLists.txt  Doxyfile.in
docs/presentation/: anim-layers.tex  notes.tex  pois-splot.gp  presentation.tex
docs/report/: IIBproject.cls  just-abstract.tex  moveCells_ad.tex  refs.bib  report.tex  technical-abstract.txt  tmr.tex
docs/report/headers/: cellref.h  tree.h  treecell.h  treegroup.h  types.h
docs/report/method/: ftttree.tex  ghosts.gp  layeredtree.tex  layerlinks.tex  moveCells_ad.tex  movecells.gp  threadtree.tex
docs/report/results/: boundary.gp  boundary.m  boundaryworld.gp  makesummary.m  pois-splot.gp
docs/techreport/: hilb.eps  mort.eps  refs.bib  tmr.tex
lib/: CMakeLists.txt
lib/tftt/: CMakeLists.txt  adapt.cc  adapt.h  cellref.cc  cellref.h  cellref_int.h  cellref_static.cc  config.cc  config.h  config.h.in  faceref.cc  faceref.h  faces.h  formatstring.h  fttcore.cc  fttcore.h  gray.cc  gray.h  hilbert.cc  hilbert.h  leaves.cc  leaves.h  parallel.cc  parallel.h  tftt.cc  tftt.h  tfttio.cc  tfttio.h  tfttops.cc  tfttops.h  tree.cc  tree.h  treecell.cc  treecell.h  treecellref.cc  treecellref.h  treeface.cc  treeface.h  treegroup.cc  treegroup.h  (+6 more)
lib/tftt/io/: CMakeLists.txt  plot.cc  plot.h  plot3d.cc  plot3d.h  pnm.cc  pnm.h  serialize.cc  serialize.h  tfttio.cc  tfttio.h  tikz.cc  tikz.h
lib/tftt/iter/: CMakeLists.txt  activecurve.cc  activecurve.h  all.h  boundarycells.cc  boundarycells.h  cellrefiterator.cc  cellrefiterator.h  curve.cc  curve.h  leaforthos.cc  leaforthos.h  leaves.cc  leaves.h  neighbours.cc  neighbours.h  poissonneighbours.cc  poissonneighbours.h
lib/tftt/structure/: CMakeLists.txt  groupmemory.h  tree.cc  tree.h  treecell.cc  treecell.h  treeface.cc  treeface.h  treegroup.cc  treegroup.h  treevertex.cc  treevertex.h
lib/util/: CMakeLists.txt  formatstring.h  pars.cc  pars.h
test/: CMakeLists.txt
test/circle/: CMakeLists.txt  main.cc
test/circle2/: CMakeLists.txt  main.cc
test/mandelbrot/: CMakeLists.txt  formatstring.h  main.cc  pars.cc  pars.h
test/parcircle/: CMakeLists.txt  backup.cpp  main.cc  prop.cc
test/parpois/: CMakeLists.txt  main.cc
test/poisson/: CMakeLists.txt  main.cc
test/report/: CMakeLists.txt  borderanalysis.cc  demoline.cc  distrib.cc  ghosts.gp  movecells.cc  movecells.gp
test/rt/: CMakeLists.txt  boundarycond.cc  boundarycond.h  compute.cc  compute.h  computePoisCoef.cc  computePoisCoef.h  delta.par  init.cc  init.h  main.cc  pars.cc  pars.h  phys.cc  phys.h  readData.cc  readData.h  relax.cc  resid.cc  slvsml.cc  solve.h
test/tools/: CMakeLists.txt  plottr.cc  pos2id.cc
test/unittests/: CMakeLists.txt  formatstring.h  gray_ut.cc  main.cc  tftt_ut.cc  tree_ut.cc  treecellref_ut.cc  treegroup_ut.cc  treeid_ut.cc
