cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(LinkedTree)

FIND_PACKAGE( Boost 1.40 COMPONENTS mpi REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

find_package(MPI REQUIRED)
include_directories(${MPI_CXX_INCLUDE_PATH})


set(TFTT_NAME "LinkedTree")
set(TFTT_VERSION "0.0.0")
set(TFTT_BRIEF "${TFTT_NAME} implements a parallel Threaded Fully-Threaded-Tree structure.")

set(COMMON_FLAGS "-std=c++11 ${MPI_COMPILE_FLAGS}")
set(DEBUG_FLAGS "${COMMON_FLAGS} -O0 -Wall -DTFTT_DEBUG")
set(RELEASE_FLAGS "${COMMON_FLAGS} -O3 -DNDEBUG")
set(PROFILE_FLAGS "${COMMON_FLAGS} -O0 -pg")


set(CMAKE_CXX_FLAGS_DEBUG ${DEBUG_FLAGS})
set(CMAKE_C_FLAGS_DEBUG ${DEBUG_FLAGS})
set(CMAKE_EXE_LINKER_FLAGS_DEBUG ${DEBUG_FLAGS})

set(CMAKE_CXX_FLAGS_RELEASE ${RELEASE_FLAGS})
set(CMAKE_C_FLAGS_RELEASE ${RELEASE_FLAGS})
set(CMAKE_EXE_LINKER_FLAGS_RELEASE ${RELEASE_FLAGS})

set(CMAKE_CXX_FLAGS_PROFILE ${PROFILE_FLAGS})
set(CMAKE_C_FLAGS_PROFILE ${PROFILE_FLAGS})
set(CMAKE_EXE_LINKER_FLAGS_PROFILE ${PROFILE_FLAGS})

set(CMAKE_CONFIGURATION_TYPES Debug Release Profile)

message("* Build type is : ${CMAKE_BUILD_TYPE}")

add_subdirectory(lib)
add_subdirectory(test)
